--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="red_200">#F35E5E</color>
+    <color name="red_500">#F33737</color>
+    <color name="red_700">#ff0000</color>
+    <color name="teal_200">#ff0065</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="darkBackground">#202020</color>
+    <color name="mediumDarkBackground">#303030</color>
+    <color name="lightBackground">#404040</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
+
+    <!--<color name="colorPrimary">#ff0000</color>-->
+    <!--<color name="colorPrimaryDark">#3700B3</color>-->
+    <!--<color name="colorAccent">#ff0065</color>-->
+    <!--<color name="mediumDarkBackground">#303030</color>-->
+    <!--<color name="darkBackground">#202020</color>-->
+    <!--<color name="lightBackground">#404040</color>-->
